Projekat/micko.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: %empty
    3              | function_list function
    4              | function_list global_variable

    5 global_variable: _TYPE _ID _SEMICOLON

    6 $@1: %empty

    7 function: _TYPE _ID $@1 _LPAREN sabezParametara _RPAREN body

    8 sabezParametara: %empty
    9                | parameters

   10 parameters: parameter
   11           | parameters _COMMA parameter

   12 parameter: _TYPE _ID

   13 $@2: %empty

   14 $@3: %empty

   15 body: _LBRACKET $@2 variable_list $@3 statement_list _RBRACKET

   16 variable_list: %empty
   17              | variable_list variable

   18 $@4: %empty

   19 variable: _TYPE $@4 vars _SEMICOLON

   20 vars: _ID
   21     | vars _COMMA _ID

   22 statement_list: %empty
   23               | statement_list statement

   24 statement: compound_statement
   25          | assignment_statement
   26          | if_statement
   27          | return_statement
   28          | postincrement_statement
   29          | while_statement
   30          | loop_statement
   31          | branch_statement
   32          | function_statement
   33          | select_statement

   34 $@5: %empty

   35 select_statement: _SELECT multi_vars _FROM _ID $@5 _WHERE _LPAREN logic_rel_exp _RPAREN _SEMICOLON

   36 multi_vars: _ID
   37           | multi_vars _COMMA _ID

   38 $@6: %empty

   39 branch_statement: _BRANCH _LSQUAREBRACKET _ID _ARROW literal _ARROW literal _ARROW literal _RSQUAREBRACKET $@6 _ONE _ARROW statement _TWO _ARROW statement _THREE _ARROW statement _OTHER _ARROW statement

   40 $@7: %empty

   41 loop_statement: _LOOP _LPAREN _ID _COMMA literal _COMMA literal _COMMA literal _RPAREN $@7 statement

   42 postincrement_statement: _ID _POSTINCREMENT _SEMICOLON

   43 $@8: %empty

   44 compound_statement: _LBRACKET $@8 variable_list statement_list _RBRACKET

   45 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   46 num_exp: exp
   47        | num_exp _AROP exp

   48 exp: literal
   49    | _ID
   50    | function_call
   51    | _LPAREN num_exp _RPAREN
   52    | _ID _POSTINCREMENT
   53    | _LPAREN num_exp _RELOP num_exp _RPAREN _QUESTIONMARK num_exp _TWODOTS num_exp _SEMICOLON

   54 literal: _INT_NUMBER
   55        | _UINT_NUMBER

   56 function_statement: function_call _SEMICOLON

   57 $@9: %empty

   58 function_call: _ID $@9 _LPAREN argument _RPAREN

   59 argument: %empty
   60         | num_exp
   61         | argument _COMMA num_exp

   62 if_statement: if_part
   63             | if_part _ELSE statement

   64 @10: %empty

   65 if_part: _IF _LPAREN @10 logic_rel_exp _RPAREN statement

   66 logic_rel_exp: rel_exp
   67              | logic_rel_exp _LOGICOPER rel_exp

   68 rel_exp: num_exp _RELOP num_exp

   69 while_statement: _WHILE _LPAREN logic_rel_exp _RPAREN statement

   70 return_statement: _RETURN num_exp _SEMICOLON
   71                 | _RETURN _SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _TYPE <i> (258) 5 7 12 19
    _IF (259) 65
    _ELSE (260) 63
    _RETURN (261) 70 71
    _ID <s> (262) 5 7 12 20 21 35 36 37 39 41 42 45 49 52 58
    _INT_NUMBER <s> (263) 54
    _UINT_NUMBER <s> (264) 55
    _LPAREN (265) 7 35 41 51 53 58 65 69
    _RPAREN (266) 7 35 41 51 53 58 65 69
    _LBRACKET (267) 15 44
    _RBRACKET (268) 15 44
    _ASSIGN (269) 45
    _SEMICOLON (270) 5 19 35 42 45 53 56 70 71
    _AROP <i> (271) 47
    _RELOP <i> (272) 53 68
    _COMMA (273) 11 21 37 41 61
    _POSTINCREMENT <i> (274) 42 52
    _WHILE (275) 69
    _LOGICOPER (276) 67
    _LOOP (277) 41
    _BRANCH (278) 39
    _LSQUAREBRACKET (279) 39
    _RSQUAREBRACKET (280) 39
    _ARROW (281) 39
    _ONE (282) 39
    _TWO (283) 39
    _THREE (284) 39
    _OTHER (285) 39
    _SELECT (286) 35
    _FROM (287) 35
    _WHERE (288) 35
    _QUESTIONMARK (289) 53
    _TWODOTS (290) 53
    ONLY_IF (291)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    program (38)
        on left: 1
        on right: 0
    function_list (39)
        on left: 2 3 4
        on right: 1 3 4
    global_variable (40)
        on left: 5
        on right: 4
    function (41)
        on left: 7
        on right: 3
    $@1 (42)
        on left: 6
        on right: 7
    sabezParametara (43)
        on left: 8 9
        on right: 7
    parameters (44)
        on left: 10 11
        on right: 9 11
    parameter (45)
        on left: 12
        on right: 10 11
    body (46)
        on left: 15
        on right: 7
    $@2 (47)
        on left: 13
        on right: 15
    $@3 (48)
        on left: 14
        on right: 15
    variable_list (49)
        on left: 16 17
        on right: 15 17 44
    variable (50)
        on left: 19
        on right: 17
    $@4 (51)
        on left: 18
        on right: 19
    vars (52)
        on left: 20 21
        on right: 19 21
    statement_list (53)
        on left: 22 23
        on right: 15 23 44
    statement (54)
        on left: 24 25 26 27 28 29 30 31 32 33
        on right: 23 39 41 63 65 69
    select_statement (55)
        on left: 35
        on right: 33
    $@5 (56)
        on left: 34
        on right: 35
    multi_vars (57)
        on left: 36 37
        on right: 35 37
    branch_statement (58)
        on left: 39
        on right: 31
    $@6 (59)
        on left: 38
        on right: 39
    loop_statement (60)
        on left: 41
        on right: 30
    $@7 (61)
        on left: 40
        on right: 41
    postincrement_statement (62)
        on left: 42
        on right: 28
    compound_statement (63)
        on left: 44
        on right: 24
    $@8 (64)
        on left: 43
        on right: 44
    assignment_statement (65)
        on left: 45
        on right: 25
    num_exp <i> (66)
        on left: 46 47
        on right: 45 47 51 53 60 61 68 70
    exp <i> (67)
        on left: 48 49 50 51 52 53
        on right: 46 47
    literal <i> (68)
        on left: 54 55
        on right: 39 41 48
    function_statement (69)
        on left: 56
        on right: 32
    function_call <i> (70)
        on left: 58
        on right: 50 56
    $@9 (71)
        on left: 57
        on right: 58
    argument <i> (72)
        on left: 59 60 61
        on right: 58 61
    if_statement (73)
        on left: 62 63
        on right: 26
    if_part <i> (74)
        on left: 65
        on right: 62 63
    @10 (75)
        on left: 64
        on right: 65
    logic_rel_exp (76)
        on left: 66 67
        on right: 35 65 67 69
    rel_exp <i> (77)
        on left: 68
        on right: 66 67
    while_statement (78)
        on left: 69
        on right: 29
    return_statement (79)
        on left: 70 71
        on right: 27


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (function_list)

    program        go to state 1
    function_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: function_list .
    3 function_list: function_list . function
    4              | function_list . global_variable

    _TYPE  shift, and go to state 4

    $default  reduce using rule 1 (program)

    global_variable  go to state 5
    function         go to state 6


State 3

    0 $accept: program $end .

    $default  accept


State 4

    5 global_variable: _TYPE . _ID _SEMICOLON
    7 function: _TYPE . _ID $@1 _LPAREN sabezParametara _RPAREN body

    _ID  shift, and go to state 7


State 5

    4 function_list: function_list global_variable .

    $default  reduce using rule 4 (function_list)


State 6

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 7

    5 global_variable: _TYPE _ID . _SEMICOLON
    7 function: _TYPE _ID . $@1 _LPAREN sabezParametara _RPAREN body

    _SEMICOLON  shift, and go to state 8

    $default  reduce using rule 6 ($@1)

    $@1  go to state 9


State 8

    5 global_variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 5 (global_variable)


State 9

    7 function: _TYPE _ID $@1 . _LPAREN sabezParametara _RPAREN body

    _LPAREN  shift, and go to state 10


State 10

    7 function: _TYPE _ID $@1 _LPAREN . sabezParametara _RPAREN body

    _TYPE  shift, and go to state 11

    $default  reduce using rule 8 (sabezParametara)

    sabezParametara  go to state 12
    parameters       go to state 13
    parameter        go to state 14


State 11

   12 parameter: _TYPE . _ID

    _ID  shift, and go to state 15


State 12

    7 function: _TYPE _ID $@1 _LPAREN sabezParametara . _RPAREN body

    _RPAREN  shift, and go to state 16


State 13

    9 sabezParametara: parameters .
   11 parameters: parameters . _COMMA parameter

    _COMMA  shift, and go to state 17

    $default  reduce using rule 9 (sabezParametara)


State 14

   10 parameters: parameter .

    $default  reduce using rule 10 (parameters)


State 15

   12 parameter: _TYPE _ID .

    $default  reduce using rule 12 (parameter)


State 16

    7 function: _TYPE _ID $@1 _LPAREN sabezParametara _RPAREN . body

    _LBRACKET  shift, and go to state 18

    body  go to state 19


State 17

   11 parameters: parameters _COMMA . parameter

    _TYPE  shift, and go to state 11

    parameter  go to state 20


State 18

   15 body: _LBRACKET . $@2 variable_list $@3 statement_list _RBRACKET

    $default  reduce using rule 13 ($@2)

    $@2  go to state 21


State 19

    7 function: _TYPE _ID $@1 _LPAREN sabezParametara _RPAREN body .

    $default  reduce using rule 7 (function)


State 20

   11 parameters: parameters _COMMA parameter .

    $default  reduce using rule 11 (parameters)


State 21

   15 body: _LBRACKET $@2 . variable_list $@3 statement_list _RBRACKET

    $default  reduce using rule 16 (variable_list)

    variable_list  go to state 22


State 22

   15 body: _LBRACKET $@2 variable_list . $@3 statement_list _RBRACKET
   17 variable_list: variable_list . variable

    _TYPE  shift, and go to state 23

    $default  reduce using rule 14 ($@3)

    $@3       go to state 24
    variable  go to state 25


State 23

   19 variable: _TYPE . $@4 vars _SEMICOLON

    $default  reduce using rule 18 ($@4)

    $@4  go to state 26


State 24

   15 body: _LBRACKET $@2 variable_list $@3 . statement_list _RBRACKET

    $default  reduce using rule 22 (statement_list)

    statement_list  go to state 27


State 25

   17 variable_list: variable_list variable .

    $default  reduce using rule 17 (variable_list)


State 26

   19 variable: _TYPE $@4 . vars _SEMICOLON

    _ID  shift, and go to state 28

    vars  go to state 29


State 27

   15 body: _LBRACKET $@2 variable_list $@3 statement_list . _RBRACKET
   23 statement_list: statement_list . statement

    _IF        shift, and go to state 30
    _RETURN    shift, and go to state 31
    _ID        shift, and go to state 32
    _LBRACKET  shift, and go to state 33
    _RBRACKET  shift, and go to state 34
    _WHILE     shift, and go to state 35
    _LOOP      shift, and go to state 36
    _BRANCH    shift, and go to state 37
    _SELECT    shift, and go to state 38

    statement                go to state 39
    select_statement         go to state 40
    branch_statement         go to state 41
    loop_statement           go to state 42
    postincrement_statement  go to state 43
    compound_statement       go to state 44
    assignment_statement     go to state 45
    function_statement       go to state 46
    function_call            go to state 47
    if_statement             go to state 48
    if_part                  go to state 49
    while_statement          go to state 50
    return_statement         go to state 51


State 28

   20 vars: _ID .

    $default  reduce using rule 20 (vars)


State 29

   19 variable: _TYPE $@4 vars . _SEMICOLON
   21 vars: vars . _COMMA _ID

    _SEMICOLON  shift, and go to state 52
    _COMMA      shift, and go to state 53


State 30

   65 if_part: _IF . _LPAREN @10 logic_rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 54


State 31

   70 return_statement: _RETURN . num_exp _SEMICOLON
   71                 | _RETURN . _SEMICOLON

    _ID           shift, and go to state 55
    _INT_NUMBER   shift, and go to state 56
    _UINT_NUMBER  shift, and go to state 57
    _LPAREN       shift, and go to state 58
    _SEMICOLON    shift, and go to state 59

    num_exp        go to state 60
    exp            go to state 61
    literal        go to state 62
    function_call  go to state 63


State 32

   42 postincrement_statement: _ID . _POSTINCREMENT _SEMICOLON
   45 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON
   58 function_call: _ID . $@9 _LPAREN argument _RPAREN

    _ASSIGN         shift, and go to state 64
    _POSTINCREMENT  shift, and go to state 65

    $default  reduce using rule 57 ($@9)

    $@9  go to state 66


State 33

   44 compound_statement: _LBRACKET . $@8 variable_list statement_list _RBRACKET

    $default  reduce using rule 43 ($@8)

    $@8  go to state 67


State 34

   15 body: _LBRACKET $@2 variable_list $@3 statement_list _RBRACKET .

    $default  reduce using rule 15 (body)


State 35

   69 while_statement: _WHILE . _LPAREN logic_rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 68


State 36

   41 loop_statement: _LOOP . _LPAREN _ID _COMMA literal _COMMA literal _COMMA literal _RPAREN $@7 statement

    _LPAREN  shift, and go to state 69


State 37

   39 branch_statement: _BRANCH . _LSQUAREBRACKET _ID _ARROW literal _ARROW literal _ARROW literal _RSQUAREBRACKET $@6 _ONE _ARROW statement _TWO _ARROW statement _THREE _ARROW statement _OTHER _ARROW statement

    _LSQUAREBRACKET  shift, and go to state 70


State 38

   35 select_statement: _SELECT . multi_vars _FROM _ID $@5 _WHERE _LPAREN logic_rel_exp _RPAREN _SEMICOLON

    _ID  shift, and go to state 71

    multi_vars  go to state 72


State 39

   23 statement_list: statement_list statement .

    $default  reduce using rule 23 (statement_list)


State 40

   33 statement: select_statement .

    $default  reduce using rule 33 (statement)


State 41

   31 statement: branch_statement .

    $default  reduce using rule 31 (statement)


State 42

   30 statement: loop_statement .

    $default  reduce using rule 30 (statement)


State 43

   28 statement: postincrement_statement .

    $default  reduce using rule 28 (statement)


State 44

   24 statement: compound_statement .

    $default  reduce using rule 24 (statement)


State 45

   25 statement: assignment_statement .

    $default  reduce using rule 25 (statement)


State 46

   32 statement: function_statement .

    $default  reduce using rule 32 (statement)


State 47

   56 function_statement: function_call . _SEMICOLON

    _SEMICOLON  shift, and go to state 73


State 48

   26 statement: if_statement .

    $default  reduce using rule 26 (statement)


State 49

   62 if_statement: if_part .
   63             | if_part . _ELSE statement

    _ELSE  shift, and go to state 74

    $default  reduce using rule 62 (if_statement)


State 50

   29 statement: while_statement .

    $default  reduce using rule 29 (statement)


State 51

   27 statement: return_statement .
